# belka_del

./: .gitignore  README.md  README_MODULAR.md  pyproject.toml
configs/: config.yaml  config_cpu.yaml  config_gpu.yaml
docs/: cluster_usage.md
logs/: cpu_preprocess_39985794.err  cpu_preprocess_39985794.out  cpu_preprocess_39986269.err  cpu_preprocess_39986269.out  cpu_preprocess_40005866.err  cpu_preprocess_40005866.out  cpu_preprocess_40008915.err  cpu_preprocess_40008915.out  cpu_preprocess_40027434.err  cpu_preprocess_40027434.out  cpu_preprocess_40039400.err  cpu_preprocess_40039400.out  cpu_preprocess_40039584.err  cpu_preprocess_40039584.out
notebooks/: belka_embedding.ipynb  belka_transformer.ipynb  ecfps-and-random-forest.ipynb
scripts/: belka.py  pipeline.py  slurm_utils.py  validate_data.sh
slurm/: job_cpu_preprocess.sh  job_cpu_preprocess_debug.sh  job_gpu_inference.sh  job_gpu_training.sh
src/: __init__.py  belka.py  belka_utils.py  data_processing.py  pipeline_plan.md  training.py
src/slurm_utils/: __init__.py  directory_manager.py  environment.py  file_validator.py  job_manager.py
