[tool.poetry]
name = "belka_del"
version = "0.1.0"
description = ""
authors = ["David Lin"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
# Restrict to Python 3.10.x so TensorFlow I/O matches
python = ">=3.10,<3.11"

# Core ML frameworks (prioritized)
torch = "^2.7.0"
scikit-learn = "^1.3.0"
tensorflow = "^2.14.0"

# Numeric & scientific (adjust numpy to satisfy TF requirements)
numpy = ">=1.26,<2.2.0"
scipy = "^1.15.2"
xgboost = "^3.0.0"
shap = "^0.47.2"
seaborn = "^0.13.2"
matplotlib = "^3.10.1"
meteostat = "^1.6.8"
statsmodels = "^0.14.4"
optuna = "^4.3.0"
plotly = "^6.0.1"
manim = "^0.19.0"
watermark = "^2.5.0"
ipykernel = "^6.29.5"
kaggle = "^1.7.4.5"
opencv-python = "^4.11.0.86"
librosa = "^0.11.0"
timm = "^1.0.15"
rdkit = "<=2024.9.5"
duckdb = "^1.3.1"
mapply = "^0.1.28"
scikit-fingerprints = "^1.16.0"
atominsmiles = "^1.0.2"
dask = "^2025.5.1"
pyarrow = "^20.0.0"
einops = "^0.8.1"
kagglehub = "^0.3.12"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

